# stc_test

./: CMakeLists.txt  MovAvg.cpp  MovAvg.h  README.md  efficiency.xlsx
